test: fix index access in SelectJakartaDataQuerySpecialTest for query condition